--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
 <body>
     
     <div>
-        <h3>My First Website</h3>
+        <h3>My First Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate est nemo sapiente ipsam harum sequi perferendis, architecto iusto sunt fuga repudiandae autem minus molestias officiis quas neque consequuntur qui id?</p>
+    </div>
+    <div>
+        <h3>My Second Blog</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate est nemo sapiente ipsam harum sequi perferendis, architecto iusto sunt fuga repudiandae autem minus molestias officiis quas neque consequuntur qui id?</p>
+    </div>
+    <div>
+        <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate est nemo sapiente ipsam harum sequi perferendis, architecto iusto sunt fuga repudiandae autem minus molestias officiis quas neque consequuntur qui id?</p>
     </div>
 </body>
