--- a/index.html
+++ b/index.html
@@ -21,5 +21,13 @@
         <h3>My Third Blog</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate est nemo sapiente ipsam harum sequi perferendis, architecto iusto sunt fuga repudiandae autem minus molestias officiis quas neque consequuntur qui id?</p>
     </div>
+    <div>
+        <h3>How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
