--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>kim kim kim khai everyday one single dim</h3>
+        <img src="Images/kim.jpg" alt="">
+    </div>
 </body>
 </html>
